@@ -1,6 +1,5 @@
 <?php if(!defined('INDEX')) die("No direct script access allowed."); ?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title><?php print $title; ?> | <?php print $pageName; ?></title>
@@ -15,13 +14,7 @@
 			</div>
 			
 			<div id="content">
-			<?php
-				if(file_exists('application/pages/'. $pages .'.page.tpl.php')) {
-					include('pages/'. $pages .'.page.tpl.php');
-				} else {
-					include('pages/notfound.tpl.php');
-				}
-			?>
+			<?php print $content; ?>
 			</div>
 			
 			<div id="footer">Footer</div>
