@@ -1,0 +1,33 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Modified title | Framework</title>
+		<link href="/application/assets/css/reset.css" rel="stylesheet" type="text/css" />
+<link href="/application/assets/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/application/assets/css/globalCSS.css" rel="stylesheet" type="text/css" />
+<link href="/application/assets/css/globalCSS.css" rel="stylesheet" type="text/css" />
+	</head>
+	
+	<body>
+		<div id="wrapper">
+			<div id="header">
+				<h1>Headline</h1>
+				<div id="menu"><ul>
+	<li><a href="/">Startpage</a></li>
+	<li><a href="/page">Page 1</a></li>
+</ul></div>
+			</div>
+			
+			<div id="content">
+			<div>
+	<h2>Blogpost: :D</h2>
+</div>
+			</div>
+			
+			<div id="footer">Footer</div>
+		</div>
+		<script src="/application/assets/script/jquery.js" type="text/javascript"></script>
+<script src="/application/assets/script/script.js" type="text/javascript"></script>
+	</body>
+</html><!-- Cache updated 5th May 2012 20:20 -->
