@@ -20,9 +20,7 @@ function printr($array) {
 // Time ago
 function timeago($ptime) {
 	$etime = time() - $ptime;
-
 	if($etime < 1) return 'less than 1 second ago';
-
 	$a = array (
 		12 * 30 * 24 * 60 * 60 =>  'year',
 		30 * 24 * 60 * 60 =>  'month',
@@ -31,7 +29,6 @@ function timeago($ptime) {
 		60	=>  'minute',
 		1 =>  'second'
 	);
-
 	foreach($a as $secs => $str) {
 		$d = $etime / $secs;
 
